--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
             <video
               id="mppVideo"
               class="mpp-video"
-              src="src/mobile-proj-1.mp4"
+              src="https://personalportfolio-v2.vercel.app/mobile-proj-1.mp4"
               playsinline
               preload="metadata"
             ></video>
