--- a/index.html
+++ b/index.html
@@ -546,12 +546,13 @@
         <div class="mpp-phone">
           <div class="mpp-phone-frame">
             <video
-              id="mppVideo"
-              class="mpp-video"
-              src="https://personalportfolio-v2.vercel.app/mobile-proj-1.mp4"
-              playsinline
-              preload="metadata"
-            ></video>
+            id="mppVideo"
+            class="mpp-video"
+            src="/src/mobile-proj-1.mp4"
+            playsinline
+            preload="metadata"
+            controls
+          ></video>
 
             <button id="mppPlayBtn" class="mpp-play" type="button" aria-label="Play demo">▶</button>
           </div>
