--- a/index.html
+++ b/index.html
@@ -545,14 +545,9 @@
       <div class="pg-left">
         <div class="mpp-phone">
           <div class="mpp-phone-frame">
-            <video
-            id="mppVideo"
-            class="mpp-video"
-            src="/src/mobile-proj-1.mp4"
-            playsinline
-            preload="metadata"
-            controls
-          ></video>
+           <video id="mppVideo" class="mpp-video" playsinline preload="metadata">
+  <source src="/src/mobile-proj-1.mp4" type="video/mp4" />
+</video>
 
             <button id="mppPlayBtn" class="mpp-play" type="button" aria-label="Play demo">▶</button>
           </div>
